# Cache-Analysis-Framework-for-Staic-Access-Patterns

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backend/: __init__.py  __main__.py  main.py  reports.py
backend/plotting/: __init__.py  bars.py  figures.py  style.py
backend/tests/: test_main.py  test_reports.py
examples/: polybench_2mm_g_ape.json  polybench_atax_g_ape.json  polybench_correlation_g_ape.json  polybench_gemm_g_ape.json  polybench_jacobi_g_ape.json  test_2d_g_ape.json  test_2steps_g_ape.json  test_call_g_ape.json  test_constant_access2_g_ape.json  test_constant_access_g_ape.json  test_constant_variable_g_ape.json  test_global_g_ape.json  test_local_g_ape.json  test_matmul_cache_friendly_g_ape.json  test_matmul_g_ape.json  test_matmul_params_g_ape.json  test_mixed_global_param_g_ape.json  test_multi_array_g_ape.json  test_multi_g_ape.json  test_ptr_const_param_g_ape.json  test_ptr_param_g_ape.json  test_regular_block_g_ape.json  test_stencil_g_ape.json  test_struct_g_ape.json  test_unnamed_param_g_ape.json
include/analysis/: Attribution.hpp  Diagnostics.hpp  MissClassifier.hpp  SimulationStats.hpp
include/ap/: AccessEvent.hpp  AccessLayout.hpp  AddressResolver.hpp  ApLoader.hpp  ApNode.hpp  EventBuilder.hpp  Region.hpp
include/cache/: CacheConfig.hpp  CacheHierarchy.hpp  CacheLevel.hpp  CacheSet.hpp  YamlConfigParser.hpp
include/cli/: RunLogger.hpp  Usage.hpp
include/memory/: AddressMapper.hpp  MemoryLayout.hpp
include/pipeline/: Pipeline.hpp
include/report/: CsvWriter.hpp  JsonWriter.hpp  MarkdownWriter.hpp
settings/: cache.yaml
src/: main.cpp
src/analysis/: Attribution.cpp  Diagnostics.cpp  MissClassifier.cpp
src/ap/: AddressResolver.cpp  ApLoader.cpp  EventBuilder.cpp
src/cache/: CacheHierarchy.cpp  CacheLevel.cpp  CacheSet.cpp  YamlConfigParser.cpp
src/cli/: RunLogger.cpp  Usage.cpp
src/memory/: AddressMapper.cpp  MemoryLayout.cpp
src/pipeline/: Pipeline.cpp
src/report/: CsvWriter.cpp  JsonWriter.cpp  MarkdownWriter.cpp
tests/analysis/: test_attribution.cpp  test_diagnostics.cpp  test_miss_classifier.cpp  test_simulation_stats.cpp
tests/ap/: test_address_resolver.cpp  test_ap_loader.cpp  test_event_builder.cpp
tests/cache/: test_cache_hierarchy.cpp  test_cache_level.cpp  test_cache_set.cpp  test_yaml_parser.cpp
tests/cli/: test_run_logger.cpp  test_usage.cpp
tests/integration/: test_pipeline_v2.cpp
tests/memory/: test_address_mapper.cpp  test_memory_layout.cpp
tests/report/: test_csv_writer.cpp  test_json_writer.cpp  test_markdown_writer.cpp
